sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:2: error: illegal start of simple pattern
var int i= 0
         ^AlgBubbleSort1:3: error: '=' expected but ';' found.
def bubbleSort()  {
^AlgBubbleSort1:8: error: '(' expected but identifier found.
   if plusPetit(i+1,i)
      ^