sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
var int i= 0
def bubbleSort()  {
	var faitechange:boolean=true
while(faitechange==true)
faitechange=false;
  for(i<-0 to getNombrevaleurs())
   if plusPetit(i+1,i)
    {echange(i+1,i)
     faitechange=true}
}
